--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-  <title><%= htmlWebpackPlugin.options.title %></title>
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+  <title>贴吧撒钱找主播，直播2小时补贴400元</title>
 </head>
 <body>
   <div id='react-container'></div>
-</body>
+<script type="text/javascript" src="./dist/main.js"></script></body>
 </html>
